
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>mrt-storepub</artifactId>
    <groupId>org.cdlib.mrt</groupId>

    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>UC3-mrtStorePub</name>
    <description>UC3 Merritt Micro-Services</description>
    <url>http://uc3.cdlib.org</url>
    <build>
      <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.0</version>
            <configuration>
              <source>1.8</source>
              <target>1.8</target>
            </configuration>
          </plugin>
      </plugins>
    </build>
    <!-- let profiles determine which conf module to run -->
    <profiles>
        <profile>
            <id>notUC3</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>   
            <modules>
                <module>store-conf</module>
                <!--module>store-src</module-->
                <module>store2-src</module>
                <module>store-war</module>
                <module>store-it</module>
            </modules>
        </profile>
     </profiles>
    
</project>
